--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 </head>
 
 
-
 <body>
-    <a href = "">Skip to Main Content</a>
+    <a href = "#main" class="skip">Skip to Main Content</a>
 	<header>
 		<nav>
 			<ul>
@@ -26,12 +25,18 @@
 	</header>
 
 	<main>
-        <div>
+        <div class="container">
+					<div class="mini">
             <p>Welcome to Around the World With Julia, your go-to destination for all things pets, recipes, and travel! Explore a world of captivating content where we cater to your love for furry companions, culinary delights, and globetrotting adventures. </p>
-        </div>
-		    <p>My name is Julia and I am currently studying Computer Science at the University of Michigan (Graduation: April 2026). I've been interested in web design ever since my first HTML coding experience in 5th grade, when I made a website about my favorit color: purple!</p>
-            <p>I am not a big pet-person (partially due to my mild fur allergy), but my favorite dog in the whole workd is Ace Kumar. I enjoy cooking, and I have a long list of recipies that I have already or are planning to recreate! Travel has never been a huge hobby of mine, but I have recently had some fun trips to India, New York City and Puerto Vallarta, Mexico!</p>
-            <p>You can find me on <a href = "https://www.linkedin.com/in/julia-tauro/">LinkedIn</a> or contact me at <a href = "mailto:john@example.co">jtauro@umich.edu</a>.</p>
+          </div>
+					<div class="mini">
+			    	<p>My name is Julia and I am currently studying Computer Science at the University of Michigan (Graduation: April 2026). I've been interested in web design ever since my first HTML coding 	experience in 5th grade, when I made a website about my favorit color: purple!</p>
+					</div>
+					<div class="mini">
+						<p>I am not a big pet-person (partially due to my mild fur allergy), but my favorite dog in the whole workd is Ace Kumar. I enjoy cooking, and I have a long list of recipies that I have already or are planning to recreate! Travel has never been a huge hobby of mine, but I have recently had some fun trips to India, New York City and Puerto Vallarta, Mexico!</p>
+					</div>
+				</div>
+				<p class="note">You can find me on <a href = "https://www.linkedin.com/in/julia-tauro/">LinkedIn</a> or contact me at <a href = "mailto:john@example.co">jtauro@umich.edu</a>.</p>
 	</main>
 
 	<footer>
