--- a/pets.html
+++ b/pets.html
@@ -6,11 +6,12 @@
 	<link rel="icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/pets.css">
 	<title>Around the World With Julia</title>
 </head>
 
 <body>
-    <a href = "">Skip to Main Content</a>
+    <a href = "#main" class="skip">Skip to Main Content</a>
 	<header>
 		<nav>
 			<ul>
@@ -24,37 +25,36 @@
 	</header>
 
     <main>
-        <div>
-            <h2>Ace Singh</h2>
-            <img src="images/ace.jpeg" width = "300" alt="Black lab wearing a red checkered bandana">
-            <p>Ace is the third child of the Kumar family, from Novi. He enjoys walking in his neighborhood, eating and bothering his sister. Ace has a grass allergy, but he has never let that stop him from playing outside. On his daily walks, he enjoys sniffing things he shouldn't and pulling on his leash. Ace has been known to have younger brother energy, but he claims that this is justifiable because he is, in fact, the youngest brother. Ace is literally my favorite dog ever.</p>
+        <div class="container">
+            <div class="mini">
+                <h2>Ace Singh</h2>
+                <img src="images/ace.jpeg" id="img1" alt="Black lab wearing a red checkered bandana">
+                <p>Ace is the third child of the Kumar family, from Novi. He enjoys walking in his neighborhood, eating and bothering his sister. Ace has a grass allergy, but he has never let that stop him from playing outside. On his daily walks, he enjoys sniffing things he shouldn't and pulling on his leash. Ace has been known to have younger brother energy, but he claims that this is justifiable because he is, in fact, the youngest brother. Ace is literally my favorite dog ever.</p>
 
-            <!-- <video width="200"  controls>
-                <source src="images/bacon_agility.mov">
-                Your browser does not support the video tag.  This was a video of a girl and dog demonstrating a sit and stay procedure.
-            </video> -->
+                <h3>Ace's YEA's</h3>
+                <ul class="list">
+                    <li>Walks</li>
+                    <li>Playing outside</li>
+                    <li>Ankita's friends (specifically Julia)</li>
+                </ul>
 
-            <h3>Ace's YEA's</h3>
-            <ul>
-                <li>Walks</li>
-                <li>Playing outside</li>
-                <li>Ankita's friends (specifically Julia)</li>
-            </ul>
-            <h3>Ace's NEA's</h3>
-            <ul>
-                <li>Posing for pictures</li>
-                <li>Being left behind on vacations</li>
-                <li>Listening to Ankita</li>
-            </ul>
-
-            <h2>Yuzu</h2>
-            <img src="images/yuzu.jpeg" width = "300" alt="Small yorkie with two girls">
-            <p>Yuzu is the Rennell's puppy. She understands English and Japanese and is quite the fashion icon. Yuzu enjoys (short) walks and occasionally posing for pictures. Yuzu is a yorkie-maltese mix, aka a morkie. You can find Yuzu on <a href = "https://www.instagram.com/yu_zu0">instagram</a>, where her sisters run her account. Yuzu once peed on my foot, but I believe that it was a sign of her affection.</p>
-
-            <h2>Sweetie</h2>
-            <img src="images/sweetie.jpeg" width = "300" alt="Small puppy looks down while being pet by a hand">
-            <p>I met Sweetie once at an event in Ann Arbor. Sweetie is a therapy dog that is just as sweet as her name. When we met, she hardly the size of my hand. Her favorit activities are running off-leash, getting petted and being outside.</p>
-
+                <h3>Ace's NEA's</h3>
+                <ul class="list">
+                    <li>Posing for pictures</li>
+                    <li>Being left behind on vacations</li>
+                    <li>Listening to Ankita</li>
+                </ul>
+            </div>
+            <div class="mini">
+                <h2>Yuzu</h2>
+                <img src="images/yuzu.jpeg" id="img2" alt="Small yorkie with two girls">
+                <p>Yuzu is the Rennell's puppy. She understands English and Japanese and is quite the fashion icon. Yuzu enjoys (short) walks and occasionally posing for pictures. Yuzu is a yorkie-maltese mix, aka a morkie. You can find Yuzu on <a href = "https://www.instagram.com/yu_zu0">Instagram</a>, where her sisters run her account. Yuzu once peed on my foot, but I believe that it was a sign of her affection.</p>
+            </div>
+            <div class="mini">
+                <h2>Sweetie</h2>
+                <img src="images/sweetie.jpeg" id="img3" height = "600" alt="Small puppy looks down while being pet by a hand">
+                <p>I met Sweetie once at an event in Ann Arbor. Sweetie is a therapy dog that is just as sweet as her name. When we met, she hardly the size of my hand. Her favorit activities are running off-leash, getting petted and being outside.</p>
+            </div>
     </main>
 
 	<footer>
