--- a/travel.html
+++ b/travel.html
@@ -6,11 +6,13 @@
 	<link rel="icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/pets.css">
+	<link rel="stylesheet" href="css/travel.css">
 	<title>Around the World With Julia</title>
 </head>
 
 <body>
-    <a href = "">Skip to Main Content</a>
+	<a href = "#main" class="skip">Skip to Main Content</a>
 	<header>
 		<nav>
 			<ul>
@@ -24,20 +26,32 @@
 	</header>
 
   <main>
-    <div>
-      <h2>Recent Adventures</h2>
-        <img src = "images/nyc.jpeg" height="250" alt = "NYC yellow taxi in front of a brick building">
-        <img src = "images/pvr.jpeg" height="250" alt = "A vibrant flowering tree on the streets of Puerto Vallarta">
-        <img src = "images/hp.jpeg" height="250" alt = "A girl poses in front of a foggy valley"> 
-      <p>I enjoy taking trips with my family or to see family! Recently, I have gone on a few incredible family trips across the globe. Anytime spent with the people I live is time well spent, but beautiful views and sunny beaches certainly make that time better!<p>
-          
-      <h3>Places I reccomend</h3>
-      <ul>
-        <li>Mumbai, India</li>
-        <li>Himachal Pradesh, India</li>
-        <li>New York City, U.S.A.</li>
-        <li>Puerto Vallarta, Mexico</li>
-    </ul>
+    <h2>Recent Adventures</h2>
+		<div class="container">  
+			  <div>
+					<p>I enjoy taking trips with my family or to see family! Recently, I have gone on a few incredible family trips across the globe. Anytime spent with the people I live is time well spent, but beautiful views and sunny beaches certainly make that time better!<p>
+
+					<h3>Places I Reccomend</h3>
+					<ul class="list">
+						<li>Mumbai, India</li>
+						<li>Himachal Pradesh, India</li>
+						<li>New York City, U.S.A.</li>
+						<li>Puerto Vallarta, Mexico</li>
+					</ul>
+				</div>
+				<div>
+        	<img id="img1" src = "images/nyc.jpeg" alt = "NYC yellow taxi in front of a brick building">
+				</div>
+				<div>
+					<img id="img2" src = "images/pvr.jpeg" alt = "A vibrant flowering tree on the streets of Puerto Vallarta">
+        </div>
+				<div>
+					<img id="img3" src = "images/hp.jpeg" alt = "A girl poses in front of a foggy valley"> 
+				</div>	
+			</div>
+				<!-- <div>
+					
+				</div>			 -->
 </main>
 
 	<footer>
