--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <body>
-    <a href="#main" class="skip">Skip to Main Content</a>
+    <a href="#main" class="skip" tabindex="0">Skip to Main Content</a>
 	<header>
 		<nav>
 			<ul>
