--- a/travel.html
+++ b/travel.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<a href="#main" class="skip">Skip to Main Content</a>
+	<a href="#main" class="skip" tabindex="0">Skip to Main Content</a>
 	<header>
 		<nav>
 			<ul>
