i think this is better for mobile now

--- a/recipes.html
+++ b/recipes.html
@@ -10,8 +10,10 @@
 </head>
 
 <body>
-	<a href="#main" class="skip" tabindex="0">Skip to Main Content</a>
 	<header>
+		<div id="skip">
+    	<a href="#maincontent">Skip to Main Content</a>
+		</div>
 		<nav>
 			<ul>
 				<li><a href = "index.html" >Home</a></li>
@@ -23,7 +25,7 @@
 		<h1>Recipies</h1>
 	</header>
 
-    <main>
+    <main id="maincontent">
         <div>
 					<div class="grid-container">
 						<div class="headerItem"><h2>My Top Hits!</h2></div>
@@ -56,11 +58,11 @@
 
 						
 						<div class="smallerItem1"><ul class="list">
-							<ol>1. Pour the rice in a colander and wash thoroughly for about 30 seconds to remove as much starch as possible.  Drain.</ol>
-							<ol>2. Heat a medium pot on high.  Add oil and jeera.  Fry for 30 seconds, stirring constantly.</ol>
-							<ol>3. Add the rice and fry for 1 minute, stirring constantly.</ol>
-							<ol>4. Add the water and preserved lemons.  Stir well.  Cover and bring to a boil.</ol>
-							<ol>5. Gently fluff up the rice and serve.></ol>
+							<li>1. Pour the rice in a colander and wash thoroughly for about 30 seconds to remove as much starch as possible.  Drain.</li>
+							<li>2. Heat a medium pot on high.  Add oil and jeera.  Fry for 30 seconds, stirring constantly.</li>
+							<li>3. Add the rice and fry for 1 minute, stirring constantly.</li>
+							<li>4. Add the water and preserved lemons.  Stir well.  Cover and bring to a boil.</li>
+							<li>5. Gently fluff up the rice and serve.></li>
 						</ul></div>
 					</div>
 				</main>
