--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
 
 <body>
-    <a href="#main" class="skip" tabindex="0">Skip to Main Content</a>
 	<header>
+		<div id="skip">
+    	<a href="#maincontent">Skip to Main Content</a>
+		</div>
 		<nav>
 			<ul>
 				<li class="active"><a href = "index.html" >Home</a></li>
@@ -23,7 +25,7 @@
 		<h1>Welcome to Around the World With Julia!</h1>
 	</header>
 
-	<main>
+	<main id="maincontent">
         <div class="container">
 					<div class="mini">
             <p>Welcome to Around the World With Julia, your go-to destination for all things pets, recipes, and travel! Explore a world of captivating content where we cater to your love for furry companions, culinary delights, and globetrotting adventures. </p>
