--- a/pets.html
+++ b/pets.html
@@ -10,8 +10,10 @@
 </head>
 
 <body>
-    <a href="#main" class="skip" tabindex="0">Skip to Main Content</a>
 	<header>
+		<div id="skip">
+    	<a href="#maincontent">Skip to Main Content</a>
+		</div>
 		<nav>
 			<ul>
 				<li><a href = "index.html" >Home</a></li>
@@ -23,7 +25,7 @@
 		<h1>Pets</h1>
 	</header>
 
-    <main>
+    <main id="maincontent">
         <div class="container">
             <div class="mini">
                 <h2>Ace Singh</h2>
