--- a/travel.html
+++ b/travel.html
@@ -11,8 +11,10 @@
 </head>
 
 <body>
-	<a href="#main" class="skip" tabindex="0">Skip to Main Content</a>
 	<header>
+		<div id="skip">
+    	<a href="#maincontent">Skip to Main Content</a>
+		</div>
 		<nav>
 			<ul>
 				<li><a href = "index.html" >Home</a></li>
@@ -24,7 +26,7 @@
 		<h1>Travel</h1>
 	</header>
 
-  <main>
+  <main id="maincontent">
     <h2>Recent Adventures</h2>
 		<div class="container">  
 			  <div>
